<resources>
    <!-- Strings used for Principal -->
    <string name="app_name">ARP</string>
    <string name="action_settings">Salir</string>

    <!-- Strings used for Login (Iniciar Sesion) -->
    <string name="title_activity_second">Home</string>
    <string name="textLogin">Iniciar Sesión</string>
    <string name="textUsuario">Usuario</string>
    <string name="textContrasenia">Contraseña</string>
    <string name="txtBienvenido">¡Bienvenido!</string>
    <string name="textOlvidaste">¿Olvidaste la contraseña?</string>

    <!-- Strings used for Registro -->
    <string name="title_activity_registro">Registro</string>
    <string name="textRegistro">Registro de Usuario</string>
    <string name="textNombre">Nombre completo</string>
    <string name="textCorreo">Correo electrónico</string>
    <string name="usuario">Usuario:</string>
    <string name="textPassword">Contraseña</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="textRegistrar">Registrar</string>
    <string name="textPregunta">¿No tienes una cuenta?</string>
    <string name="textRegistrate">Registrate aquí</string>

    <!-- Strings used for Reset Password -->
    <string name="textTitleRP">Restablecer contraseña</string>
    <string name="textInstructions">Ingrese el correo electrónico que utiliza para iniciar sesión en la aplicación.</string>
    <string name="textEmail">Correo electrónico</string>
    <string name="textResetPassword">Restablecer Contraseña</string>

    <!-- Strings used for MenuSlideActivity -->
    <string name="title_activity_menu_slide">MenuSlideActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ARP</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Información</string>
    <string name="menu_slideshow">Reportar</string>
    <string name="menu_mapa">Mapa</string>
    <string name="Status">Estado:</string>
    <string name="last_update">Última actualización:</string>

    <string-array name="tipo">
        <item>Estudiante</item>
        <item>Docente</item>
        <item>Externo</item>
    </string-array>

    <!-- Strings used for Fragment Home -->
    <string name="titleMapa">Ubicación de los contenedores</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_report">ReportActivity</string>

    <!-- Strings used for Activity_Historial -->
    <string name="Historial">Historial</string>
    <string name="ordenarPor">Ordenar por:</string>

    <!-- Strings used for Fragment Mapa (Mapa detallado) -->
    <string name="textUbicacionContenedores">Ubicación de los contenedores</string>
    <string name="textInicioContenedores">El Instituto Tecnológico de Ciudad Juárez cuenta con múltiples contenedores de color azul, que sirven para el reciclaje de papel bond, y se encuentran ubicados en:</string>
    <string name="textContenedor1">1.- Administrativo</string>
    <string name="textContenedor2">2.- Ciencias Básicas</string>
    <string name="textContenedor3">3.- Biblioteca</string>
    <string name="textContenedor4">4.- Desarrollo Académico</string>
    <string name="textContenedor5">5.- Recursos Financieros</string>
    <string name="textContenedor6">6.- Servicios Escolares</string>
    <string name="textContenedor7">7.- Educación a Distancia</string>
    <string name="textContenedor8">8.- Edificio Guillot</string>
    <string name="textContenedor9">9.- Gestión y Vinculación</string>
    <string name="textContenedor10">10.- Departamento de Ing. Industrial</string>
    <string name="textContenedor11">11.- Centro de Idiomas</string>
    <string name="textContenedor12">12.- División de Estudios de Posgrado e Investigación</string>
    <string name="textContenedor13">13.- Departamento de Ing. Sistemas Computacionales</string>


    <!-- Strings used for Mapa -->
    <string-array name="category">
        <item>Administrativo</item>
        <item>Ciencias Básicas</item>
        <item>Biblioteca</item>
        <item>Desarrollo Académico</item>
        <item>Recursos Financieros</item>
        <item>Servicios Escolares</item>
        <item>Educación a Distancia</item>
        <item>Guillot</item>
        <item>Gestión y Vinculación</item>
        <item>Departamento de Ing. Industrial</item>
        <item>Centro de Idiomas</item>
        <item>Posgrado</item>
        <item>Departamento de Ing. Sistemas</item>
    </string-array>

    <string-array name="search">
<!--        <item>Ordernar por</item>-->
        <item>Ubicación</item>

        <item>Contenedor dañado</item>
        <item>Contenedor lleno</item>
        <item>Fecha</item>

        <item>Dañado</item>
        <item>Muy Dañado</item>
        <item>Poco Dañado</item>

        <item>Enviado</item>
        <item>Sin atender</item>
    </string-array>

    <string-array name="estado">
        <item>Muy poco dañado</item>
        <item>Dañado</item>
        <item>Muy dañado</item>
    </string-array>
</resources>