<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyecto.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_map_activity"
            app:destination="@id/nav_map_activity" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.proyecto.fragments.MapaFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyecto.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <activity
        android:id="@+id/nav_map_activity"
        android:name="com.example.proyecto.Map.MapActivity"
        android:label="@string/menu_mapa"
        tools:layout="@layout/activity_map" />
</navigation>