<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/textRegistro"
                android:textSize="@dimen/sizeDatos"
                android:textStyle="bold"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.3">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textNombre"
                    android:textSize="@dimen/sizeDatos"
                    android:layout_marginLeft="@dimen/margenesCajas"
                    android:layout_marginRight="@dimen/margenesCajas"
                    android:id="@+id/txtName"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textCorreo"
                    android:textSize="@dimen/sizeDatos"
                    android:inputType="textEmailAddress"
                    android:layout_marginLeft="@dimen/margenesCajas"
                    android:layout_marginRight="@dimen/margenesCajas"
                    android:id="@+id/txtEmail"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/SpnTipo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorBlack"
                android:dropDownSelector="@color/colorBlack"
                style="@style/mySpinnerItemStyle2"
                android:theme="@style/mySpinnerItemStyle"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textPassword"
                    android:inputType="textPassword"
                    android:textSize="@dimen/sizeDatos"
                    android:layout_marginLeft="@dimen/margenesCajas"
                    android:layout_marginRight="@dimen/margenesCajas"
                    android:id="@+id/txtPass"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:textSize="@dimen/sizeDatos"
                    android:layout_marginLeft="@dimen/margenesCajas"
                    android:layout_marginRight="@dimen/margenesCajas"
                    android:id="@+id/txtConfirmPass"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textRegistrar"
                android:onClick="enviarDatosRegistro"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/marginSuperior"
                android:layout_marginLeft="@dimen/margenesCajas"
                android:layout_marginRight="@dimen/margenesCajas"
                android:id="@+id/btnRegistrar"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>