<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visible='false'
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorGreen"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_weight="0.6">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo_arp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_weight="0.4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="nuevaPagina"
                android:text="@string/textLogin"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sizeTitulo"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/colorGreen">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textCorreo"
                    android:textSize="@dimen/sizeDatos"
                    android:textStyle="italic"
                    android:id="@+id/txtCoreoElect"
                    android:inputType="textEmailAddress"
                    android:layout_marginHorizontal="@dimen/margenesCajas">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorGreen"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/colorGreen">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textContrasenia"
                    android:textSize="@dimen/sizeDatos"
                    android:textStyle="italic"
                    android:inputType="textPassword"
                    android:id="@+id/txtContrasenia"
                    android:layout_marginHorizontal="@dimen/margenesCajas">
                </com.google.android.material.textfield.TextInputEditText>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margenIzqPregOlvidaste"
                    android:layout_marginTop="@dimen/margenSupPregOlvidaste"
                    android:text="@string/textOlvidaste"
                    android:textAlignment="center"
                    android:textColor="@color/colorOrange"
                    android:textSize="@dimen/sizePregunta"
                    android:textStyle="bold"
                    android:id="@+id/textViewSendToResetPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textLogin"
                android:textSize="@dimen/sizeDatos"
                android:background="@color/colorGreen"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/marginSuperior"
                android:layout_marginHorizontal="@dimen/margenesCajas"
                android:onClick="enviarDatos"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textPregunta"
                    android:textSize="@dimen/sizePregunta"
                    android:layout_marginTop="@dimen/margenSupPregunta"
                    android:textColor="@color/colorBlack"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textRegistrate"
                    android:textSize="@dimen/sizePregunta"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margenSupPregunta"
                    android:layout_marginStart="@dimen/margenIzqPreg"
                    android:textColor="@color/colorOrange"
                    android:onClick="crearUsuario"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>